<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IntroductionFragment">


        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/nike_shoes"
            android:scaleType="centerCrop" />


        <LinearLayout
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="428dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvThe"
                style="@style/the"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the"
                android:background="@color/colorPrimary" />

            <TextView

                style="@style/you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/awesome"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="@id/tvThe"
                app:layout_constraintTop_toBottomOf="@id/tvThe" />

            <TextView
                style="@style/the"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoes" />

            <TextView
                style="@style/welcome_subtitle"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/fin_yor_shoe" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imNext"
            android:layout_margin="15dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_icon"
            android:src="@drawable/ic_round_arrow_forward" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>