<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        tools:context=".AddShoeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/shoe_info"
                style="@style/sub_title_page" />

            <EditText
                android:id="@+id/editText"
                style="@style/input_him_text"
                android:background="@drawable/input_decoration"
                android:hint="@string/shoes_title"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/edDescription"
                style="@style/input_text_area"
                android:layout_marginTop="10dp"
                android:height="140dp"
                android:background="@drawable/input_decoration"
                android:hint="@string/shoes_description"
                android:inputType="text|textMultiLine"
                android:maxLines="10"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <EditText
                android:id="@+id/editPrice"
                style="@style/input_him_text"
                android:background="@drawable/input_decoration"
                android:hint="@string/shoes_price"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_brand"
                style="@style/sub_title_page" />

            <Spinner
                android:id="@+id/spinnerBrand"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:listitem="@layout/item_brand" />

            <TextView

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size"
                style="@style/sub_title_page" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShoesSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toStartOf="@id/addButton"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="12"
                tools:listitem="@layout/item_shoes_size" />

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/add_image"
                style="@style/sub_title_page" />

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="200dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvShoeImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toStartOf="@id/addButton"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_shoes_image" />

                <ImageButton
                    android:id="@+id/addButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_icon"
                    android:contentDescription="@string/add_image"
                    android:src="@drawable/ic_add_black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_rounded"
                app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>


    </ScrollView>
</layout>