<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.LoginFragment"
        android:label="@string/login_fragment_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.WelcomeFragment"
        android:label="fragment_welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_introductionFragment"
            app:destination="@id/introductionFragment" />
    </fragment>
    <fragment
        android:id="@+id/introductionFragment"
        android:name="com.udacity.shoestore.IntroductionFragment"
        android:label="fragment_introduction"
        tools:layout="@layout/fragment_introduction" >
        <action
            android:id="@+id/action_introductionFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.udacity.shoestore.HomeFragment"
        android:label="@string/homeScreen"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_addShoeFragment"
            app:destination="@id/addShoeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addShoeFragment"
        android:name="com.udacity.shoestore.AddShoeFragment"
        android:label="@string/add_shoe"
        tools:layout="@layout/fragment_add_shee">
        <action
            android:id="@+id/action_addShoeFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>

