<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shoe_light_gradiant"
        android:padding="15dp"
        >
        <ImageView
            android:id="@+id/imBrand"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/nike_brands"
            />
        <ImageView
            android:id="@+id/imShoe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:src="@drawable/default_shoes"
            />
        <LinearLayout
            android:id="@+id/priceLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imShoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tvShowTitle"
                style="@style/article_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_shoe_name"
                />
            <TextView
                android:id="@+id/tvShowDescription"
                style="@style/article_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_shoe_description"
                />
            <TextView
                android:id="@+id/tvShowPrice"
                style="@style/article_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_shoe_price"/>
        </LinearLayout>
        <ImageView
            app:layout_constraintTop_toTopOf="@id/priceLayout"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/heart"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>