<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
<!--    Is use constraint Layout because a when to position de FAB in button of this view  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        tools:context=".HomeFragment">
        <!--        I use linearLayout here because there is not enough constraint between the elements of this view.-->
        <!--        They are just positioned one below the other-->
            <LinearLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--HEADER SECTION -->
                <TextView
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discover"
                    style="@style/title_page" />

                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explore_collection"
                    style="@style/default_text_style" />

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="10dp"
                    app:cardCornerRadius="2dp" />
                <!--END HEADER SECTION -->

                <!--NEW COLLECTION CARD-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:paddingVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal">

                    <TextView
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_collection"
                        style="@style/sub_title_page" />

                    <TextView
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_all"
                        style="@style/article_description"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <!--END NEW COLLECTION CARD-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNewCollection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="2"
                    tools:listitem="@layout/shoes_item"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                <!--MOST POPULAR CARD-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:paddingVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal">

                    <TextView
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/most_popular"
                        style="@style/sub_title_page" />

                    <TextView
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_all"
                        style="@style/article_description"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <!--END MOST POPULAR CARD-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMostPopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="2"
                    tools:listitem="@layout/shoes_vertical_item"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>
    </ScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/ic_add"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>